--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Prig: Open Source Alternative to Microsoft Fakes By: @urasandesu</title>
+    <title>Prig by urasandesu</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -20,8 +20,8 @@
         <p class="header">Open Source Alternative to Microsoft Fakes</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/releases/download/v0.0.0-alpha8/Prig-v0.0.0-alpha8.with.binary.zip">Download BIN</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/releases/download/v0.0.0-alpha8/Prig-v0.0.0-alpha8.zip">Download SRC</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/tarball/master">Download TAR</a></li>
           <li><a class="buttons github" href="https://github.com/urasandesu/Prig">View On GitHub</a></li>
         </ul>
 
@@ -47,7 +47,7 @@ This framework enables that any methods are replaced with mocks. For example, a 
 <h2>
 <a name="status" class="anchor" href="#status"><span class="octicon octicon-link"></span></a>STATUS</h2>
 
-<p>As of Sept 7, 2014, Prig does not work completely. However, we steadily continue to develop at the private repository. This framework will come out within the year if everything goes well.</p>
+<p>As of Sept 23, 2014, Prig does not work completely. However, we steadily continue to develop at the private repository. This framework will come out within the year if everything goes well.</p>
 
 <h2>
 <a name="quick-tour" class="anchor" href="#quick-tour"><span class="octicon octicon-link"></span></a>QUICK TOUR</h2>
@@ -263,6 +263,8 @@ This framework enables that any methods are replaced with mocks. For example, a 
 </pre></div>
 
 <p>As just described, Prig helps the code that depends on an untestable library gets trig back. I guarantee you will enjoy your development again!!</p>
+
+<p>For more information, see also <a href="https://github.com/urasandesu/Prig/wiki">Prig's wiki</a>.</p>
 
 <h1>
 <a name="installation-from-source-code" class="anchor" href="#installation-from-source-code"><span class="octicon octicon-link"></span></a>INSTALLATION FROM SOURCE CODE</h1>
