--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Prig: Open Source Alternative to Microsoft Fakes By: @urasandesu</title>
+    <title>Prig by urasandesu</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -20,8 +20,8 @@
         <p class="header">Open Source Alternative to Microsoft Fakes</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/releases/download/v0.0.0-alpha9/Prig-v0.0.0-alpha9.with.binary.zip">Download BIN</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/releases/download/v0.0.0-alpha9/Prig-v0.0.0-alpha9.zip">Download SRC</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/tarball/master">Download TAR</a></li>
           <li><a class="buttons github" href="https://github.com/urasandesu/Prig">View On GitHub</a></li>
         </ul>
 
@@ -47,7 +47,7 @@ This framework enables that any methods are replaced with mocks. For example, a 
 <h2>
 <a name="status" class="anchor" href="#status"><span class="octicon octicon-link"></span></a>STATUS</h2>
 
-<p>As of Sept 23, 2014, Prig does not work completely. However, we steadily continue to develop at the private repository. This framework will come out within the year if everything goes well.</p>
+<p>As of Oct 26, 2014, Prig does not work completely. However, we steadily continue to develop at the private repository. This framework will come out within the year if everything goes well.</p>
 
 <h2>
 <a name="quick-tour" class="anchor" href="#quick-tour"><span class="octicon octicon-link"></span></a>QUICK TOUR</h2>
@@ -78,6 +78,8 @@ This framework enables that any methods are replaced with mocks. For example, a 
 
 <div class="highlight highlight-powershell"><pre><span class="n">PM</span><span class="p">&gt;</span> <span class="n">Install-Package</span> <span class="n">Prig</span> <span class="n">-Pre</span>
 </pre></div>
+
+<p><strong>NOTE:</strong> Installation will mostly go well. However, it doesn't go well if performing just after installing Visual Studio. <a href="https://github.com/urasandesu/Prig/issues/21#issuecomment-58741311">See also this issue's comment</a>.</p>
 
 <h3>
 <a name="step-2-add-stub-settings" class="anchor" href="#step-2-add-stub-settings"><span class="octicon octicon-link"></span></a>Step 2: Add Stub Settings</h3>
@@ -275,11 +277,13 @@ This framework enables that any methods are replaced with mocks. For example, a 
 <p>To build this project needs the following dependencies: </p>
 
 <ul>
-<li><a href="http://www.visualstudio.com/">Visual Studio 2013(more than Professional Edition)</a></li>
+<li><a href="http://www.visualstudio.com/">Visual Studio 2013(more than Professional Edition because it uses ATL)</a></li>
 <li>
 <a href="http://www.boost.org/">Boost 1.55.0</a><br>
 Extract to C:\boost_1_55_0, and will build with the following options(x86 and x64 libs are required):</li>
-</ul><pre lang="dos"><code>CMD boost_1_55_0&gt;cd
+</ul>
+
+<pre lang="dos"><code>CMD boost_1_55_0&gt;cd
 C:\boost_1_55_0
 
 CMD boost_1_55_0&gt;bootstrap.bat
@@ -321,7 +325,9 @@ Install using with the installer(VS_VmSdk.exe).</li>
 <li>
 <a href="http://docs.nuget.org/docs/start-here/installing-nuget">NuGet Command-Line Utility</a><br>
 Download command line utility <code>nuget.exe</code>, then append its path to the environment variable <code>path</code>.</li>
-</ul><h2>
+</ul>
+
+<h2>
 <a name="build" class="anchor" href="#build"><span class="octicon octicon-link"></span></a>BUILD</h2>
 
 <p>After preparing all dependencies, you can build this project in the following steps:</p>
@@ -330,7 +336,9 @@ Download command line utility <code>nuget.exe</code>, then append its path to th
 <li>Run Visual Studio as Administrator, and open Prig.sln(This sln contains some ATL projects, so the build process will modify registry).</li>
 <li>According to the version of the product to use, change the solution configuration and the solution platform and build.</li>
 <li>The results are output to <code>$(SolutionDir)$(Configuration)\$(PlatformTarget)\</code>.</li>
-</ol><h2>
+</ol>
+
+<h2>
 <a name="registration" class="anchor" href="#registration"><span class="octicon octicon-link"></span></a>REGISTRATION</h2>
 
 <p>Run Developer Command Prompt for VS2013 as Administrator, and register dlls that were output to <code>$(SolutionDir)$(Configuration)\$(PlatformTarget)\</code> to registry and GAC as follows(these are the examples for x86/.NET 3.5, but also another environments are in the same manner): </p>
