--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Prig: Open Source Alternative to Microsoft Fakes By: @urasandesu</title>
+    <title>Prig by urasandesu</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -20,8 +20,8 @@
         <p class="header">Open Source Alternative to Microsoft Fakes</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/releases/download/v1.1.0/Prig-v1.1.0.with.binary.zip">Download BIN</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/releases/download/v1.1.0/Prig-v1.1.0.zip">Download SRC</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/tarball/master">Download TAR</a></li>
           <li><a class="buttons github" href="https://github.com/urasandesu/Prig">View On GitHub</a></li>
         </ul>
 
@@ -47,7 +47,7 @@ This framework enables that any methods are replaced with mocks. For example, a 
 <h2>
 <a id="status" class="anchor" href="#status" aria-hidden="true"><span class="octicon octicon-link"></span></a>STATUS</h2>
 
-<p>As of May 24, 2015, Developing V2.0.0(Since this version, Prig is going to support Visual Studio integrated environment. More details can be found <a href="https://github.com/urasandesu/Prig.V2Docs/blob/master/README.md">here</a>).<br>
+<p>As of July 30, 2015, Developing V2.0.0(Since this version, Prig is going to support Visual Studio integrated environment. More details can be found <a href="https://github.com/urasandesu/Prig.V2Docs/blob/master/README.md">here</a>).<br>
 As of Dec 31, 2014, Released V1.1.0.</p>
 
 <h2>
