--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Prig: Open Source Alternative to Microsoft Fakes By: @urasandesu</title>
+    <title>Prig by urasandesu</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -20,8 +20,8 @@
         <p class="header">Open Source Alternative to Microsoft Fakes</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/releases/download/v1.1.0/Prig-v1.1.0.with.binary.zip">Download BIN</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/releases/download/v1.1.0/Prig-v1.1.0.zip">Download SRC</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/tarball/master">Download TAR</a></li>
           <li><a class="buttons github" href="https://github.com/urasandesu/Prig">View On GitHub</a></li>
         </ul>
 
@@ -55,7 +55,7 @@ As of Dec 31, 2014, Released V1.1.0.</p>
 
 <p>Let's say you want to test the following code: </p>
 
-<div class="highlight highlight-cs"><pre><span class="pl-k">using</span> System;
+<div class="highlight highlight-source-cs"><pre><span class="pl-k">using</span> System;
 
 <span class="pl-k">namespace</span> <span class="pl-en">ConsoleApplication</span>
 {
@@ -76,7 +76,7 @@ As of Dec 31, 2014, Released V1.1.0.</p>
 
 <p>Run Visual Studio 2013(Express for Windows Desktop or more) as Administrator, add test project(e.g. <code>ConsoleApplicationTest</code>) and run the following command in the Package Manager Console: </p>
 
-<div class="highlight highlight-powershell"><pre>PM<span class="pl-k">&gt;</span> <span class="pl-c1">Install-Package</span> Prig</pre></div>
+<div class="highlight highlight-source-powershell"><pre>PM<span class="pl-k">&gt;</span> <span class="pl-c1">Install-Package</span> Prig</pre></div>
 
 <p><strong>NOTE:</strong> Installation will mostly go well. However, it doesn't go well if performing just after installing Visual Studio. <a href="https://github.com/urasandesu/Prig/issues/21#issuecomment-58741311">See also this issue's comment</a>.</p>
 
@@ -85,7 +85,7 @@ As of Dec 31, 2014, Released V1.1.0.</p>
 
 <p>Run the following command in the Package Manager Console: </p>
 
-<div class="highlight highlight-powershell"><pre>PM<span class="pl-k">&gt;</span> <span class="pl-c1">Add-PrigAssembly</span> <span class="pl-k">-</span>Assembly <span class="pl-s">"mscorlib, Version=4.0.0.0"</span></pre></div>
+<div class="highlight highlight-source-powershell"><pre>PM<span class="pl-k">&gt;</span> <span class="pl-c1">Add-PrigAssembly</span> <span class="pl-k">-</span>Assembly <span class="pl-s">"mscorlib, Version=4.0.0.0"</span></pre></div>
 
 <p>The command means to create the indirection stub settings for the test. The reason to specify <code>mscorlib</code> is that <code>DateTime.Now</code> belongs <code>mscorlib</code>. After the command is invoked, you will get the confirmation message that the project has been modified externally, so reload the project.</p>
 
@@ -94,7 +94,7 @@ As of Dec 31, 2014, Released V1.1.0.</p>
 
 <p>You can find the setting file <code>&lt;assembly name&gt;.&lt;runtime version&gt;.v&lt;assembly version&gt;.prig</code> in the project(in this case, it is <code>mscorlib.v4.0.30319.v4.0.0.0.prig</code>). Modify the setting in accordance with the comment, then build all projects: </p>
 
-<div class="highlight highlight-xml"><pre>&lt;?<span class="pl-ent">xml</span><span class="pl-e"> version</span>=<span class="pl-s"><span class="pl-pds">"</span>1.0<span class="pl-pds">"</span></span><span class="pl-e"> encoding</span>=<span class="pl-s"><span class="pl-pds">"</span>utf-8<span class="pl-pds">"</span></span>?&gt;
+<div class="highlight highlight-text-xml"><pre>&lt;?<span class="pl-ent">xml</span><span class="pl-e"> version</span>=<span class="pl-s"><span class="pl-pds">"</span>1.0<span class="pl-pds">"</span></span><span class="pl-e"> encoding</span>=<span class="pl-s"><span class="pl-pds">"</span>utf-8<span class="pl-pds">"</span></span>?&gt;
 &lt;<span class="pl-ent">configuration</span>&gt;
 
   &lt;<span class="pl-ent">configSections</span>&gt;
@@ -144,7 +144,7 @@ As of Dec 31, 2014, Released V1.1.0.</p>
 
 <p>In the test code, it becomes testable through the use of the stub and the replacement to Test Double that returns the fake information: </p>
 
-<div class="highlight highlight-cs"><pre><span class="pl-k">using</span> NUnit.Framework;
+<div class="highlight highlight-source-cs"><pre><span class="pl-k">using</span> NUnit.Framework;
 <span class="pl-k">using</span> ConsoleApplication;
 <span class="pl-k">using</span> System;
 <span class="pl-k">using</span> System.Prig;
@@ -210,7 +210,7 @@ As of Dec 31, 2014, Released V1.1.0.</p>
 
 <p>In fact, to enable any profiler based mocking tool, you have to set the environment variables. Therefore, such libraries - Microsoft Fakes/Typemock Isolator/Telerik JustMock provide small runner to satisfy the requisition, also it is true at Prig. Use <code>prig.exe</code> and run the test as follows(continue in the Package Manager Console): </p>
 
-<div class="highlight highlight-powershell"><pre>PM<span class="pl-k">&gt;</span> cd <span class="pl-k">&lt;</span>Your Test Project<span class="pl-s">'s Output Directory(e.g. cd .\ConsoleApplicationTest\bin\Debug)&gt;</span>
+<div class="highlight highlight-source-powershell"><pre>PM<span class="pl-k">&gt;</span> cd <span class="pl-k">&lt;</span>Your Test Project<span class="pl-s">'s Output Directory(e.g. cd .\ConsoleApplicationTest\bin\Debug)&gt;</span>
 <span class="pl-s">PM&gt; prig run -process "C:\Program Files (x86)\NUnit 2.6.3\bin\nunit-console.exe" -arguments "ConsoleApplicationTest.dll /domain=None /framework=v4.0"</span>
 <span class="pl-s">NUnit-Console version 2.6.3.13283</span>
 <span class="pl-s">Copyright (C) 2002-2012 Charlie Poole.</span>
@@ -236,7 +236,7 @@ As of Dec 31, 2014, Released V1.1.0.</p>
 
 <p>If tests have been created, you can refactor illimitably! For example, you probably can find the result of refactoring as follows: </p>
 
-<div class="highlight highlight-cs"><pre><span class="pl-k">using</span> System;
+<div class="highlight highlight-source-cs"><pre><span class="pl-k">using</span> System;
 
 <span class="pl-k">namespace</span> <span class="pl-en">ConsoleApplication</span>
 {
