Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ This framework enables that any methods are replaced with mocks. For example, a 
 <a id="status" class="anchor" href="#status" aria-hidden="true"><span class="octicon octicon-link"></span></a>STATUS</h2>
 
 <p>As of July 30, 2015, Developing V2.0.0(Since this version, Prig is going to support Visual Studio integrated environment. More details can be found <a href="https://github.com/urasandesu/Prig.V2Docs/blob/master/README.md">here</a>).<br>
-As of Dec 31, 2014, Released V1.1.0.</p>
+As of Sep 14, 2015, Released V1.1.1. As the release note indicates, this family will be obsolete soon. We strongly recommend migrating to the family of the v2. About the way of the migration, please see <a href="https://github.com/urasandesu/Prig/wiki/Migration-from-v1-to-v2">our Wiki</a>.</p>
 
 <h2>
 <a id="quick-tour" class="anchor" href="#quick-tour" aria-hidden="true"><span class="octicon octicon-link"></span></a>QUICK TOUR</h2>
