--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Prig by urasandesu</title>
+    <title>Prig: Open Source Alternative to Microsoft Fakes By: @urasandesu</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -20,8 +20,8 @@
         <p class="header">Open Source Alternative to Microsoft Fakes</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/tarball/master">Download TAR</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/releases/download/v2.0.0/Prig.2.0.0.nupkg">Download Nupkg</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/releases/download/v2.0.0/Prig-v2.0.0.zip">Download SRC</a></li>
           <li><a class="buttons github" href="https://github.com/urasandesu/Prig">View On GitHub</a></li>
         </ul>
 
@@ -33,7 +33,7 @@
         <h1>
 <a id="prig-open-source-alternative-to-microsoft-fakes" class="anchor" href="#prig-open-source-alternative-to-microsoft-fakes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Prig: Open Source Alternative to Microsoft Fakes</h1>
 
-<p><img src="https://github.com/urasandesu/Prig/blob/master/Urasandesu.Prig.VSPackage/Resources/PrigPreviewImage.png" alt="Prig"></p>
+<p><img src="https://cdn.rawgit.com/urasandesu/Prig/master/Urasandesu.Prig.VSPackage/Resources/PrigPreviewImage.png" alt="Prig"></p>
 
 <p>Prig(PRototyping jIG) is a framework that generates a <a href="http://martinfowler.com/bliki/TestDouble.html">Test Double</a> like <a href="http://msdn.microsoft.com/en-us/library/hh549175.aspx">Microsoft Fakes</a>/<a href="http://www.typemock.com/isolator-product-page">Typemock Isolator</a>/<a href="http://www.telerik.com/products/mocking.aspx">Telerik JustMock</a> based on Unmanaged Profiler APIs.
 This framework enables that any methods are replaced with mocks. For example, a static property, a private method, a non-virtual member and so on.</p>
@@ -78,16 +78,16 @@ This framework enables that any methods are replaced with mocks. For example, a 
 <a id="step-2-add-stub-settings" class="anchor" href="#step-2-add-stub-settings" aria-hidden="true"><span class="octicon octicon-link"></span></a>Step 2: Add Stub Settings</h3>
 
 <p>Run Visual Studio 2013(Community or more) as Administrator, add test project(e.g. <code>QuickTourTest</code>). Then, right click <code>References</code> and select <code>Add Prig Assembly for mscorlib</code>:<br>
-<img src="https://github.com/urasandesu/Prig/blob/master/Urasandesu.Prig.VSPackage/Resources/Step%202%20Add%20Stub%20Settings.png" alt="Add Stub Settings"></p>
+<img src="https://cdn.rawgit.com/urasandesu/Prig/master/Urasandesu.Prig.VSPackage/Resources/Step%202%20Add%20Stub%20Settings.png" alt="Add Stub Settings"></p>
 
 <h3>
 <a id="step-3-modify-stub-settings" class="anchor" href="#step-3-modify-stub-settings" aria-hidden="true"><span class="octicon octicon-link"></span></a>Step 3: Modify Stub Settings</h3>
 
 <p>You can find the <a href="https://github.com/urasandesu/Prig/wiki/Cheat-Sheet#stub_settings_file">Stub Settings File</a> <code>&lt;assembly name&gt;.&lt;runtime version&gt;.v&lt;assembly version&gt;.prig</code> in the project(in this case, it is <code>mscorlib.v4.0.30319.v4.0.0.0.prig</code>). So, right click the file and select <code>Edit Prig Indirection Settings</code>:<br>
-<img src="https://github.com/urasandesu/Prig/blob/master/Urasandesu.Prig.VSPackage/Resources/Step%203%20Modify%20Stub%20Settings%2001.png" alt="Edit Prig Indirection Settings"></p>
+<img src="https://cdn.rawgit.com/urasandesu/Prig/master/Urasandesu.Prig.VSPackage/Resources/Step%203%20Modify%20Stub%20Settings%2001.png" alt="Edit Prig Indirection Settings"></p>
 
 <p>Then, <a href="https://github.com/urasandesu/Prig/wiki/Cheat-Sheet#prig_setup_session">Prig Setup Session</a> will start:<br>
-<img src="https://github.com/urasandesu/Prig/blob/master/Urasandesu.Prig.VSPackage/Resources/Step%203%20Modify%20Stub%20Settings%2002.png" alt="Prig Setup Session"></p>
+<img src="https://cdn.rawgit.com/urasandesu/Prig/master/Urasandesu.Prig.VSPackage/Resources/Step%203%20Modify%20Stub%20Settings%2002.png" alt="Prig Setup Session"></p>
 
 <div class="highlight highlight-source-powershell"><pre>Welcome to Prig Setup Session<span class="pl-k">!!</span>
 
@@ -141,7 +141,7 @@ PS <span class="pl-c1"><span class="pl-c1">01</span></span>.QuickTour<span class
 PS <span class="pl-c1"><span class="pl-c1">01</span></span>.QuickTour<span class="pl-k">&gt;</span> <span class="pl-k">exit</span></pre></div>
 
 <p>Exit the <a href="https://github.com/urasandesu/Prig/wiki/Cheat-Sheet#prig_setup_session">Prig Setup Session</a>, and paste the copied information to the <a href="https://github.com/urasandesu/Prig/wiki/Cheat-Sheet#stub_settings_file">Stub Settings File</a>:<br>
-<img src="https://github.com/urasandesu/Prig/blob/master/Urasandesu.Prig.VSPackage/Resources/Step%203%20Modify%20Stub%20Settings%2003.png" alt="Indirection Setting File"></p>
+<img src="https://cdn.rawgit.com/urasandesu/Prig/master/Urasandesu.Prig.VSPackage/Resources/Step%203%20Modify%20Stub%20Settings%2003.png" alt="Indirection Setting File"></p>
 
 <div class="highlight highlight-text-xml"><pre>&lt;?<span class="pl-ent">xml</span><span class="pl-e"> version</span>=<span class="pl-s"><span class="pl-pds">"</span>1.0<span class="pl-pds">"</span></span><span class="pl-e"> encoding</span>=<span class="pl-s"><span class="pl-pds">"</span>utf-8<span class="pl-pds">"</span></span>?&gt;
 &lt;<span class="pl-ent">configuration</span>&gt;
@@ -253,19 +253,19 @@ PS <span class="pl-c1"><span class="pl-c1">01</span></span>.QuickTour<span class
 <p><strong>NOTE:</strong> Unfortunately, you can't use official <a href="https://www.nuget.org/packages/NUnitTestAdapter/">NUnit Test Adapter</a> because it doesn't support any configurations like prime NUnit which is supported, e.g. <a href="http://www.nunit.org/index.php?p=settingsDialog&amp;r=2.6.4">NUnit Gui Runner's Settings</a> and <a href="http://www.nunit.org/index.php?p=consoleCommandLine&amp;r=2.6.4">NUnit-Console's Settings</a>.</p>
 
 <p>After install, build the test project and select the menu <code>TEST</code> - <code>Windows</code> - <code>Test Explorer</code>. Then, you can find runnable tests in the Test Explorer.<br>
-<img src="https://github.com/urasandesu/Prig/blob/master/Urasandesu.Prig.VSPackage/Resources/Step%205%20Install%20Test%20Adapter%2001.png" alt="Install Test Adapter 01"></p>
+<img src="https://cdn.rawgit.com/urasandesu/Prig/master/Urasandesu.Prig.VSPackage/Resources/Step%205%20Install%20Test%20Adapter%2001.png" alt="Install Test Adapter 01"></p>
 
 <p>When Test Adapter was installed successfully, you can also modify the <code>Test Settings</code>. As the following image, change <code>Default Processor Architecture</code> to <code>x64</code> and uncheck <code>Keep Test Execution Engine Running</code>:<br>
-<img src="https://github.com/urasandesu/Prig/blob/master/Urasandesu.Prig.VSPackage/Resources/Step%205%20Install%20Test%20Adapter%2002.png" alt="Install Test Adapter 02"></p>
+<img src="https://cdn.rawgit.com/urasandesu/Prig/master/Urasandesu.Prig.VSPackage/Resources/Step%205%20Install%20Test%20Adapter%2002.png" alt="Install Test Adapter 02"></p>
 
 <h3>
 <a id="step-6-run-tests" class="anchor" href="#step-6-run-tests" aria-hidden="true"><span class="octicon octicon-link"></span></a>Step 6: Run Tests</h3>
 
 <p>In fact, to enable any profiler based mocking tool, you have to set the environment variables. Therefore, such libraries - Microsoft Fakes/Typemock Isolator/Telerik JustMock provide small runner to satisfy the requisition, also it is true at Prig. Select the menu <code>PRIG</code> - <code>Enable Test Adapter for ConsoleApplicationTest</code>:<br>
-<img src="https://github.com/urasandesu/Prig/blob/master/Urasandesu.Prig.VSPackage/Resources/Step%206%20Run%20Tests%2001.png" alt="Run Tests 01"></p>
+<img src="https://cdn.rawgit.com/urasandesu/Prig/master/Urasandesu.Prig.VSPackage/Resources/Step%206%20Run%20Tests%2001.png" alt="Run Tests 01"></p>
 
 <p>Then, execute <code>TEST</code> - <code>Run</code> - <code>All Tests</code>, you can get test results in the Test Explorer.<br>
-<img src="https://github.com/urasandesu/Prig/blob/master/Urasandesu.Prig.VSPackage/Resources/Step%206%20Run%20Tests%2002.png" alt="Run Tests 02"></p>
+<img src="https://cdn.rawgit.com/urasandesu/Prig/master/Urasandesu.Prig.VSPackage/Resources/Step%206%20Run%20Tests%2002.png" alt="Run Tests 02"></p>
 
 <h3>
 <a id="final-step-refactoring-and-get-trig-back" class="anchor" href="#final-step-refactoring-and-get-trig-back" aria-hidden="true"><span class="octicon octicon-link"></span></a>Final Step: Refactoring and Get Trig Back!</h3>
