--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Prig: Open Source Alternative to Microsoft Fakes By: @urasandesu</title>
+    <title>Prig by urasandesu</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -20,8 +20,8 @@
         <p class="header">Open Source Alternative to Microsoft Fakes</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/releases/download/v2.0.0/Prig.2.0.0.nupkg">Download Nupkg</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/releases/download/v2.0.0/Prig-v2.0.0.zip">Download SRC</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/urasandesu/Prig/tarball/master">Download TAR</a></li>
           <li><a class="buttons github" href="https://github.com/urasandesu/Prig">View On GitHub</a></li>
         </ul>
 
@@ -41,14 +41,14 @@ This framework enables that any methods are replaced with mocks. For example, a 
 <h2>
 <a id="status" class="anchor" href="#status" aria-hidden="true"><span class="octicon octicon-link"></span></a>STATUS</h2>
 
-<p>As of Oct 12, 2015, Released V2.0.0.</p>
+<p>As of Dec 20, 2015, Released V2.1.0.</p>
 
 <h2>
 <a id="quick-tour" class="anchor" href="#quick-tour" aria-hidden="true"><span class="octicon octicon-link"></span></a>QUICK TOUR</h2>
 
 <p>Let's say you want to test the following code: </p>
 
-<div class="highlight highlight-source-cs"><pre><span class="pl-k">using</span> System;
+<div class="highlight highlight-source-cs"><pre><span class="pl-k">using</span> System<span class="pl-k">;</span>
 
 <span class="pl-k">namespace</span> <span class="pl-en">QuickTour</span>
 {
@@ -65,25 +65,38 @@ This framework enables that any methods are replaced with mocks. For example, a 
 <p>You probably can't test this code, because <code>DateTime.Now</code> returns the value that depends on an external environment. To make be testable, you should replace <code>DateTime.Now</code> to the Test Double that returns the fake information. If you use Prig, it will enable you to generate a Test Double by the following steps without any editing the product code:</p>
 
 <h3>
-<a id="step-1-install-from-chocolatey" class="anchor" href="#step-1-install-from-chocolatey" aria-hidden="true"><span class="octicon octicon-link"></span></a>Step 1: Install From Chocolatey</h3>
+<a id="step-1-install-from-visual-studio-gallery" class="anchor" href="#step-1-install-from-visual-studio-gallery" aria-hidden="true"><span class="octicon octicon-link"></span></a>Step 1: Install From Visual Studio Gallery</h3>
 
-<p>Install Chocolatey in accordance with <a href="https://chocolatey.org/">the top page</a>. Then, run Developer Command Prompt for VS2013 as Administrator, execute the following command: </p>
+<p>Run Visual Studio 2013(Community or more, 2015 is also supported) as Administrator and choose <code>TOOLS</code> - <code>Extensions and Updates...</code>.<br>
+<img src="https://cdn.rawgit.com/urasandesu/Prig/master/Urasandesu.Prig.VSPackage/Resources/Step%201%20Install%20From%20Visual%20Studio%20Gallery%2001.png" alt="Extensions and Updates... menu"></p>
 
-<pre lang="dos"><code>CMD C:\&gt; choco install prig -y
-</code></pre>
+<p>Now in the Extensions and Updates window, take the following steps:</p>
+
+<ol>
+<li>On the left side, ensure <code>Visual Studio Gallery</code> is selected under <code>Online</code>.</li>
+<li>In the search box in the upper right corner, type <code>prig</code>.</li>
+<li>Select the <code>Prig</code> package, and click <code>Download</code>.</li>
+</ol>
+
+<p><img src="https://cdn.rawgit.com/urasandesu/Prig/master/Urasandesu.Prig.VSPackage/Resources/Step%201%20Install%20From%20Visual%20Studio%20Gallery%2002.png" alt="Extensions and Updates dialog"></p>
 
 <p><strong>NOTE:</strong> Prig requires PowerShell v3.0+. If you want to use Prig in Windows 7, please install <a href="https://www.microsoft.com/en-us/download/details.aspx?id=34595">Windows Management Framework 3.0+</a> beforehand. <a href="https://github.com/urasandesu/Prig/issues/41">See also this issue</a>.</p>
+
+<p>Once restart Visual Studio, you can find <code>PRIG</code> in the menu. Choose <code>PRIG</code> - <code>Register Prig (Needs Restarting)</code>.<br>
+<img src="https://cdn.rawgit.com/urasandesu/Prig/master/Urasandesu.Prig.VSPackage/Resources/Step%201%20Install%20From%20Visual%20Studio%20Gallery%2003.png" alt="Register Prig menu"></p>
+
+<p>Finally restart Visual Studio then you are now ready.</p>
 
 <h3>
 <a id="step-2-add-stub-settings" class="anchor" href="#step-2-add-stub-settings" aria-hidden="true"><span class="octicon octicon-link"></span></a>Step 2: Add Stub Settings</h3>
 
-<p>Run Visual Studio 2013(Community or more) as Administrator, add test project(e.g. <code>QuickTourTest</code>). Then, right click <code>References</code> and select <code>Add Prig Assembly for mscorlib</code>:<br>
+<p>Add test project(e.g. <code>QuickTourTest</code>). Then, right click <code>References</code> and choose <code>Add Prig Assembly for mscorlib</code>:<br>
 <img src="https://cdn.rawgit.com/urasandesu/Prig/master/Urasandesu.Prig.VSPackage/Resources/Step%202%20Add%20Stub%20Settings.png" alt="Add Stub Settings"></p>
 
 <h3>
 <a id="step-3-modify-stub-settings" class="anchor" href="#step-3-modify-stub-settings" aria-hidden="true"><span class="octicon octicon-link"></span></a>Step 3: Modify Stub Settings</h3>
 
-<p>You can find the <a href="https://github.com/urasandesu/Prig/wiki/Cheat-Sheet#stub_settings_file">Stub Settings File</a> <code>&lt;assembly name&gt;.&lt;runtime version&gt;.v&lt;assembly version&gt;.prig</code> in the project(in this case, it is <code>mscorlib.v4.0.30319.v4.0.0.0.prig</code>). So, right click the file and select <code>Edit Prig Indirection Settings</code>:<br>
+<p>You can find the <a href="https://github.com/urasandesu/Prig/wiki/Cheat-Sheet#stub_settings_file">Stub Settings File</a> <code>&lt;assembly name&gt;.&lt;runtime version&gt;.v&lt;assembly version&gt;.prig</code> in the project(in this case, it is <code>mscorlib.v4.0.30319.v4.0.0.0.prig</code>). So, right click the file and choose <code>Edit Prig Indirection Settings</code>:<br>
 <img src="https://cdn.rawgit.com/urasandesu/Prig/master/Urasandesu.Prig.VSPackage/Resources/Step%203%20Modify%20Stub%20Settings%2001.png" alt="Edit Prig Indirection Settings"></p>
 
 <p>Then, <a href="https://github.com/urasandesu/Prig/wiki/Cheat-Sheet#prig_setup_session">Prig Setup Session</a> will start:<br>
@@ -179,11 +192,11 @@ PS <span class="pl-c1"><span class="pl-c1">01</span></span>.QuickTour<span class
 
 <p>In the test code, it becomes testable through the use of the stub and the replacement to Test Double that returns the fake information: </p>
 
-<div class="highlight highlight-source-cs"><pre><span class="pl-k">using</span> NUnit.Framework;
-<span class="pl-k">using</span> QuickTour;
-<span class="pl-k">using</span> System;
-<span class="pl-k">using</span> System.Prig;
-<span class="pl-k">using</span> Urasandesu.Prig.Framework;
+<div class="highlight highlight-source-cs"><pre><span class="pl-k">using</span> NUnit.Framework<span class="pl-k">;</span>
+<span class="pl-k">using</span> QuickTour<span class="pl-k">;</span>
+<span class="pl-k">using</span> System<span class="pl-k">;</span>
+<span class="pl-k">using</span> System.Prig<span class="pl-k">;</span>
+<span class="pl-k">using</span> Urasandesu.Prig.Framework<span class="pl-k">;</span>
 
 <span class="pl-k">namespace</span> <span class="pl-en">QuickTourTest</span>
 {
@@ -252,7 +265,7 @@ PS <span class="pl-c1"><span class="pl-c1">01</span></span>.QuickTour<span class
 
 <p><strong>NOTE:</strong> Unfortunately, you can't use official <a href="https://www.nuget.org/packages/NUnitTestAdapter/">NUnit Test Adapter</a> because it doesn't support any configurations like prime NUnit which is supported, e.g. <a href="http://www.nunit.org/index.php?p=settingsDialog&amp;r=2.6.4">NUnit Gui Runner's Settings</a> and <a href="http://www.nunit.org/index.php?p=consoleCommandLine&amp;r=2.6.4">NUnit-Console's Settings</a>.</p>
 
-<p>After install, build the test project and select the menu <code>TEST</code> - <code>Windows</code> - <code>Test Explorer</code>. Then, you can find runnable tests in the Test Explorer.<br>
+<p>After install, build the test project and choose the menu <code>TEST</code> - <code>Windows</code> - <code>Test Explorer</code>. Then, you can find runnable tests in the Test Explorer.<br>
 <img src="https://cdn.rawgit.com/urasandesu/Prig/master/Urasandesu.Prig.VSPackage/Resources/Step%205%20Install%20Test%20Adapter%2001.png" alt="Install Test Adapter 01"></p>
 
 <p>When Test Adapter was installed successfully, you can also modify the <code>Test Settings</code>. As the following image, change <code>Default Processor Architecture</code> to <code>x64</code> and uncheck <code>Keep Test Execution Engine Running</code>:<br>
@@ -261,7 +274,7 @@ PS <span class="pl-c1"><span class="pl-c1">01</span></span>.QuickTour<span class
 <h3>
 <a id="step-6-run-tests" class="anchor" href="#step-6-run-tests" aria-hidden="true"><span class="octicon octicon-link"></span></a>Step 6: Run Tests</h3>
 
-<p>In fact, to enable any profiler based mocking tool, you have to set the environment variables. Therefore, such libraries - Microsoft Fakes/Typemock Isolator/Telerik JustMock provide small runner to satisfy the requisition, also it is true at Prig. Select the menu <code>PRIG</code> - <code>Enable Test Adapter for ConsoleApplicationTest</code>:<br>
+<p>In fact, to enable any profiler based mocking tool, you have to set the environment variables. Therefore, such libraries - Microsoft Fakes/Typemock Isolator/Telerik JustMock provide small runner to satisfy the requisition, also it is true at Prig. Choose the menu <code>PRIG</code> - <code>Enable Test Adapter for ConsoleApplicationTest</code>:<br>
 <img src="https://cdn.rawgit.com/urasandesu/Prig/master/Urasandesu.Prig.VSPackage/Resources/Step%206%20Run%20Tests%2001.png" alt="Run Tests 01"></p>
 
 <p>Then, execute <code>TEST</code> - <code>Run</code> - <code>All Tests</code>, you can get test results in the Test Explorer.<br>
@@ -272,7 +285,7 @@ PS <span class="pl-c1"><span class="pl-c1">01</span></span>.QuickTour<span class
 
 <p>If tests have been created, you can refactor illimitably! For example, you probably can find the result of refactoring as follows: </p>
 
-<div class="highlight highlight-source-cs"><pre><span class="pl-k">using</span> System;
+<div class="highlight highlight-source-cs"><pre><span class="pl-k">using</span> System<span class="pl-k">;</span>
 
 <span class="pl-k">namespace</span> <span class="pl-en">QuickTour</span>
 {
@@ -345,7 +358,7 @@ Performing configuration checks
 <ul>
 <li>
 <a href="https://code.google.com/p/googletest/">Google Test 1.6</a><br>
-Extract to C:\gtest-1.6.0, and upgrade C:\gtest-1.6.0\msvc\gtest.sln to Visual Studio 2013. Choose the <code>Build</code> menu, and open <code>Configuration Manager...</code>. On <code>Configuration Manager</code> dialog box, in the <code>Active Solution Platform</code> drop-down list, select the <code>&lt;New...&gt;</code> option. After the <code>New Solution Platform</code> dialog box is opened, in the <code>Type or select the new platform</code> drop-down list, select a 64-bit platform. Then build all(Debug/Release) configurations.</li>
+Extract to C:\gtest-1.6.0, and upgrade C:\gtest-1.6.0\msvc\gtest.sln to Visual Studio 2013. Choose the <code>Build</code> menu, and open <code>Configuration Manager...</code>. On <code>Configuration Manager</code> dialog box, in the <code>Active Solution Platform</code> drop-down list, choose the <code>&lt;New...&gt;</code> option. After the <code>New Solution Platform</code> dialog box is opened, in the <code>Type or select the new platform</code> drop-down list, select a 64-bit platform. Then build all(Debug/Release) configurations.</li>
 <li>
 <a href="http://www.nunit.org/">NUnit 2.6.3.13283</a><br>
 Install using with the installer(NUnit-2.6.3.msi).</li>
